Updated official Red color

--- a/specs/lib/stylesheets/specs.sass
+++ b/specs/lib/stylesheets/specs.sass
@@ -1,5 +1,8 @@
+// RedSpec Official Stylesheet, with influence from MooTools JSSpec stylesheet.
+// (cc) http://creativecommons.org/licenses/by/3.0/us/
+
 // The colors of RedSpec
-!official       = #CC100B
+!official       = #CC0404
 !canvas         = #F3F1F1
 !dashboard      = #41464D
 !unrun_bg       = #D0C8C8
